out.log
make[1]: Entering directory '/home/jpost/LovePotion/platform/3ds'
wrap_gamepad.cpp
touch.cpp
wrap_system.cpp
system_common.cpp
poolc.cpp
audio_common.cpp
/home/jpost/LovePotion/platform/3ds/../../source/modules/touch/touch.cpp: In member function 'void love::Touch::OnEvent(int, const love::Touch::TouchInfo&)':
/home/jpost/LovePotion/platform/3ds/../../source/modules/touch/touch.cpp:34:14: error: 'LOVE_TOUCHPRESS' was not declared in this scope
   34 |         case LOVE_TOUCHPRESS:
      |              ^~~~~~~~~~~~~~~
/home/jpost/LovePotion/platform/3ds/../../source/modules/touch/touch.cpp:40:14: error: 'LOVE_TOUCHMOVED' was not declared in this scope
   40 |         case LOVE_TOUCHMOVED:
      |              ^~~~~~~~~~~~~~~
/home/jpost/LovePotion/platform/3ds/../../source/modules/touch/touch.cpp:49:14: error: 'LOVE_TOUCHRELEASE' was not declared in this scope
   49 |         case LOVE_TOUCHRELEASE:
      |              ^~~~~~~~~~~~~~~~~
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp: In function 'int Wrap_Gamepad::GetGamepadAxis(lua_State*)':
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:60:44: error: cannot convert 'std::string' {aka 'std::__cxx11::basic_string<char>'} to 'love::common::Gamepad::GamepadAxis'
   60 |     lua_pushnumber(L, self->GetGamepadAxis(axis));
      |                                            ^~~~
      |                                            |
      |                                            std::string {aka std::__cxx11::basic_string<char>}
In file included from /home/jpost/LovePotion/platform/3ds/../../include/objects/gamepad/wrap_gamepad.h:3,
                 from /home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:2:
/home/jpost/LovePotion/platform/3ds/include/objects/gamepad/gamepad.h:37:46: note:   initializing argument 1 of 'virtual float love::Gamepad::GetGamepadAxis(love::common::Gamepad::GamepadAxis) const'
   37 |             float GetGamepadAxis(GamepadAxis axis) const override;
      |                                  ~~~~~~~~~~~~^~~~
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp: In function 'int Wrap_Gamepad::GetName(lua_State*)':
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:86:39: error: request for member 'c_str' in 'self->love::Gamepad::GetName()', which is of non-class type 'const char*'
   86 |     lua_pushstring(L, self->GetName().c_str());
      |                                       ^~~~~
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp: In function 'int Wrap_Gamepad::GetVibration(lua_State*)':
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:99:5: error: 'LOVE_Vibration' was not declared in this scope
   99 |     LOVE_Vibration vibration = self->GetVibration();
      |     ^~~~~~~~~~~~~~
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:101:23: error: 'vibration' was not declared in this scope
  101 |     lua_pushnumber(L, vibration.left);
      |                       ^~~~~~~~~
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:97:15: warning: unused variable 'self' [-Wunused-variable]
   97 |     Gamepad * self = Wrap_Gamepad::CheckJoystick(L, 1);
      |               ^~~~
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp: In function 'int Wrap_Gamepad::IsDown(lua_State*)':
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:128:26: error: 'Input' has not been declared
  128 |     size_t buttonCount = Input::buttons.size();
      |                          ^~~~~
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:134:37: error: cannot convert 'size_t' {aka 'unsigned int'} to 'const std::vector<unsigned int>&'
  134 |     lua_pushboolean(L, self->IsDown(button));
      |                                     ^~~~~~
      |                                     |
      |                                     size_t {aka unsigned int}
In file included from /home/jpost/LovePotion/platform/3ds/../../include/objects/gamepad/wrap_gamepad.h:3,
                 from /home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:2:
/home/jpost/LovePotion/platform/3ds/include/objects/gamepad/gamepad.h:35:53: note:   initializing argument 1 of 'virtual bool love::Gamepad::IsDown(const std::vector<unsigned int>&) const'
   35 |             bool IsDown(const std::vector<size_t> & buttons) const override;
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp: In function 'int Wrap_Gamepad::IsGamepadDown(lua_State*)':
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:162:44: error: cannot convert 'std::string' {aka 'std::__cxx11::basic_string<char>'} to 'const std::vector<love::common::Gamepad::GamepadButton>&'
  162 |     lua_pushboolean(L, self->IsGamepadDown(button));
      |                                            ^~~~~~
      |                                            |
      |                                            std::string {aka std::__cxx11::basic_string<char>}
In file included from /home/jpost/LovePotion/platform/3ds/../../include/objects/gamepad/wrap_gamepad.h:3,
                 from /home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:2:
/home/jpost/LovePotion/platform/3ds/include/objects/gamepad/gamepad.h:39:67: note:   initializing argument 1 of 'virtual bool love::Gamepad::IsGamepadDown(const std::vector<love::common::Gamepad::GamepadButton>&) const'
   39 |             bool IsGamepadDown(const std::vector<GamepadButton> & buttons) const override;
      |                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp: In function 'int Wrap_Gamepad::SetVibration(lua_State*)':
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:202:5: error: 'LOVE_Vibration' was not declared in this scope
  202 |     LOVE_Vibration vibration;
      |     ^~~~~~~~~~~~~~
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:204:5: error: 'vibration' was not declared in this scope; did you mean 'duration'?
  204 |     vibration.left = left;
      |     ^~~~~~~~~
      |     duration
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:207:11: error: 'class love::Gamepad' has no member named 'SetVibrationValues'; did you mean 'SetVibration'?
  207 |     self->SetVibrationValues(vibration);
      |           ^~~~~~~~~~~~~~~~~~
      |           SetVibration
/home/jpost/LovePotion/platform/3ds/../../source/objects/gamepad/wrap_gamepad.cpp:209:30: error: 'class love::Gamepad' has no member named 'SyncVibration'; did you mean 'SetVibration'?
  209 |     lua_pushboolean(L, self->SyncVibration(duration));
      |                              ^~~~~~~~~~~~~
      |                              SetVibration
make[2]: *** [/opt/devkitpro/devkitARM/base_rules:80: touch.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [/opt/devkitpro/devkitARM/base_rules:80: wrap_gamepad.o] Error 1
make[1]: *** [Makefile:195: all] Error 2
make[1]: Leaving directory '/home/jpost/LovePotion/platform/3ds'
make: *** [Makefile:33: ctr] Error 2
